objects/AOPS_Account_Addendum_Community__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AECD01__c</fullName>
        <label>CCU043F_AECD01</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AECD02__c</fullName>
        <label>CCU043F_AECD02</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AECD03__c</fullName>
        <label>CCU043F_AECD03</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AECDCO1__c</fullName>
        <label>CCU043F_AECDCO1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AECDCO2__c</fullName>
        <label>CCU043F_AECDCO2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AECUST__c</fullName>
        <externalId>true</externalId>
        <label>CCU043F_AECUST</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AENM01__c</fullName>
        <label>CCU043F_AENM01</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AENM02__c</fullName>
        <label>CCU043F_AENM02</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AENM03__c</fullName>
        <label>CCU043F_AENM03</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AEUD__c</fullName>
        <label>CCU043F_AEUD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU043F_AEUU__c</fullName>
        <label>CCU043F_AEUU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC043F_ACTION__c</fullName>
        <label>CXTC043F_ACTION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC043F_AOPS_KEY1__c</fullName>
        <label>CXTC043F AOPS KEY1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC043F_AOPS_KEY2__c</fullName>
        <label>CXTC043F AOPS KEY2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC043F_AOPS_KEY3__c</fullName>
        <label>CXTC043F AOPS KEY3</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC043F_MSG_TYPE__c</fullName>
        <label>CXTC043F MSG TYPE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC043F_TIMESTAMP__c</fullName>
        <label>CXTC043F_TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Account Addendum Community</label>
    <nameField>
        <label>AOPS Account Addendum Community Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Account Addendum Community</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>